@@ -1,24 +1,24 @@
 ;; -*- mode: scheme; coding: utf-8; -*-
-(library (encoding sjis)
-    (export sjis-codec)
+(library (encoding euc-jp)
+    (export euc-jp-codec)
     (import (rnrs)
 	    (sagittarius)
 	    (encoding util)
 	    (only (core errors) raise-i/o-encoding-error raise-i/o-decoding-error)
-	    (encoding table sjis-utf16))
+	    (encoding table euc-utf16))
 
   (define (is-2-byte? b)
-    (or (<= #x81 b #x9F)
-	(<= #xE0 b #xEF)))
+    (or (<= #xA1 b #xF4)
+	(= b #x8E)))
+  
+  (define (lookup-utf16 euc)
+    (assv euc *euc-utf16-table*))
+  (define (lookup-euc utf16)
+    (assv utf16 *utf16-euc-table*))
 
-  (define (lookup-utf16 sjis)
-    (assv sjis *sjis-utf16-table*))
-  (define (lookup-sjis utf16)
-    (assv utf16 *utf16-sjis-table*))
-
-  (define (sjis-codec)
+  (define (euc-jp-codec)
     (define (getc port mode check-bom? data)
-      (define (get-sjis first)
+      (define (get-euc first)
 	(if (is-2-byte? first)
 	    (let ((second (get-u8 port)))
 	      (bitwise-ior (bitwise-arithmetic-shift-left first 8) second))
@@ -26,8 +26,8 @@
       (let loop ((first (get-u8 port)))
 	(cond ((eof-object? first) first)
 	      ((> first #x7F)
-	       (let* ((sjis (get-sjis first))
-		      (utf16 (lookup-utf16 sjis)))
+	       (let* ((euc (get-euc first))
+		      (utf16 (lookup-utf16 euc)))
 		 (cond (utf16
 			(integer->char (cdr utf16)))
 		       ((eq? mode 'ignore)
@@ -35,8 +35,8 @@
 		       ((eq? mode 'replace)
 			(integer->char #xFFFD))
 		       (else
-			(raise-i/o-decoding-error 'sjis-codec
-						  (format "Invalid encode:~a" sjis)
+			(raise-i/o-decoding-error 'euc-codec
+						  (format "Invalid encode:~a" euc)
 						  port)))))
 	      (else
 	       (integer->char first)))))
@@ -44,22 +44,22 @@
     (define (putc port c mode data)
       (let* ((ucs4 (char->integer c))
 	     (utf16 (if (< ucs4 #x10000) ucs4 (ucs4->utf16 ucs4)))
-	     (sjis (lookup-sjis utf16)))
-	(cond (sjis
-	       (let ((sjis (cdr sjis)))
-		 (if (<= sjis #xDF)
-		     (put-u8 sjis)
+	     (euc (lookup-euc utf16)))
+	(cond (euc
+	       (let ((euc (cdr euc)))
+		 (if (<= euc #xDF)
+		     (put-u8 euc)
 		     (begin
-		       (put-u8 port (bitwise-and (bitwise-arithmetic-shift-right sjis 8) #xFF))
-		       (put-u8 port (bitwise-and sjis #xFF))))))
+		       (put-u8 port (bitwise-and (bitwise-arithmetic-shift-right euc 8) #xFF))
+		       (put-u8 port (bitwise-and euc #xFF))))))
 	       ((eq? mode 'ignore) ) ;; ignore
 	       ((eq? mode 'replace)
 		(put-u8 port #xFF)
 		(put-u8 port #xFD))
 	       (else
-		(raise-i/o-encoding-error 'sjis-codec
-					  (format "character out of sjis range ~a:~s" c sjis)
+		(raise-i/o-encoding-error 'euc-codec
+					  (format "character out of euc range ~a:~s" c euc)
 					  port c)))))
-    (make-codec 'sjis-codec getc putc #f))
+    (make-codec 'euc-jp-codec getc putc #f))
 
 )
